# p10

./: .gitignore  DEMO.md  DESIGN_SYSTEM.md  IDEA.md  NOTEEDITOR_COMPLETE.md  NOTES_APP_README.md  NOTE_MANAGEMENT_COMPLETE.md  PLAN.md  PRD.md  README.md  SPEC.md  TASK_COMPLETE_SUMMARY.md  TECH_STACK.md  WORKFLOW_TEST_RESULTS.md  start-mesh.sh  start-notes-app.sh  stop-mesh.sh  test-edit-sdk.md  test-note-editor.sh  test-note-management.sh  test-notes-app.sh  test-spec-sync.md
agents-test/: .gitignore  PLAN.md  RUN-PLAYBOOK.md  launch-harness-runs.sh  score-run.sh  setup-harness-runs.sh  setup-runs.sh
agents-test/runs/codex-vet-A/backend/: README.md  pyproject.toml
agents-test/runs/codex-vet-A/backend/app/: __init__.py  database.py  main.py  models.py  scheduling.py  schemas.py  services.py
agents-test/runs/codex-vet-A/backend/vet_appointment_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: BOARD_MEMORY_PLAN.md  DAEMON_PLAN.md  KANBAN_PLAN.md  MORNING_REPORT.md  MVP3_PLAN.md  RESEARCH_NOTES.md  TASK_CREATION_PLAN.md  index.html  index.md  navigation.md  robots.txt  sitemap.xml
express-todo-server/: README.md  package-lock.json  package.json  server.js  test-error-handling.js
frontend/: NOTE_EDITOR_DEMO.md  README.md  package-lock.json  package.json
notes-api/: README.md  package-lock.json  package.json  server.js  test.js
p10-master/: DECOMPOSER_FIX_PLAN.md  integrations.json  package-lock.json  package.json
p10-pi-daemon/: package-lock.json  package.json
p10-telegram/: config.json  package-lock.json  package.json
plans/: new-project.md  (+8 more)
(+690 files in other folders)
