[project]
name = "vet-appointment-backend"
version = "0.1.0"
description = "FastAPI backend for a vet appointment application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
]

[tool.uv]
package = false
